// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CongressMembers Component Search filtering when input matches none of the data only shows data to match 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -29,29 +29,26 @@
        <input
          class=\\"search-filter-input\\"
          data-testid=\\"search-filter\\"
          id=\\"search-filter\\"
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"mno\\"
        />
-     </section>
-     <ul
-       class=\\"congress-members\\"
-       data-testid=\\"members-list\\"
-     >
-       <li>
-         <a
-           href=\\"/congress/house/member/1\\"
+       <button
+         class=\\"search-filter-reset\\"
+         data-testid=\\"search-filter-reset\\"
        >
-           abc efg (party-state)
-         </a>
-       </li>
-       <li>
-         <a
-           href=\\"/congress/house/member/2\\"
+         Reset
+       </button>
+     </section>
+     <div
+       class=\\"members-no-results\\"
      >
-           uxw xyz (party-state)
-         </a>
-       </li>
-     </ul>
+       No results for 
+       <strong>
+         <em>
+           mno
+         </em>
+       </strong>
+     </div>
    </section>
  </DocumentFragment>"
`;

exports[`CongressMembers Component Search filtering when input matches subset of the data only shows data to match first name 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -29,29 +29,28 @@
        <input
          class=\\"search-filter-input\\"
          data-testid=\\"search-filter\\"
          id=\\"search-filter\\"
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"abc\\"
        />
+       <button
+         class=\\"search-filter-reset\\"
+         data-testid=\\"search-filter-reset\\"
+       >
+         Reset
+       </button>
      </section>
      <ul
        class=\\"congress-members\\"
        data-testid=\\"members-list\\"
      >
        <li>
          <a
            href=\\"/congress/house/member/1\\"
          >
            abc efg (party-state)
-         </a>
-       </li>
-       <li>
-         <a
-           href=\\"/congress/house/member/2\\"
-         >
-           uxw xyz (party-state)
          </a>
        </li>
      </ul>
    </section>
  </DocumentFragment>"
`;

exports[`CongressMembers Component Search filtering when input matches subset of the data only shows data to match last name 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -29,24 +29,23 @@
        <input
          class=\\"search-filter-input\\"
          data-testid=\\"search-filter\\"
          id=\\"search-filter\\"
          type=\\"text\\"
-         value=\\"\\"
+         value=\\"xyz\\"
        />
+       <button
+         class=\\"search-filter-reset\\"
+         data-testid=\\"search-filter-reset\\"
+       >
+         Reset
+       </button>
      </section>
      <ul
        class=\\"congress-members\\"
        data-testid=\\"members-list\\"
      >
-       <li>
-         <a
-           href=\\"/congress/house/member/1\\"
-         >
-           abc efg (party-state)
-         </a>
-       </li>
        <li>
          <a
            href=\\"/congress/house/member/2\\"
          >
            uxw xyz (party-state)"
`;

exports[`CongressMembers Component when \`useFetch\` is awaiting promise to resolve displays \`Loading...\` 1`] = `
<section
  className="loader"
>
  <div
    className="loader-wheel"
  />
  <div
    className="loader-text"
  >
    Loading
  </div>
</section>
`;

exports[`CongressMembers Component when \`useFetch\` returns data with 200 status displays data 1`] = `
<section>
  <a
    className="chamber-members"
    href="/congress"
    onClick={[Function]}
  >
    All Congress Data
  </a>
  <h2
    className="congress-header"
  >
    Current 
    Representatives
  </h2>
  <a
    className="chamber-members"
    href="/congress/senate/members"
    onClick={[Function]}
  >
    View Current 
    Senators
  </a>
  <hr />
  <section
    className="search-filter-container"
  >
    <label
      htmlFor="search-filter"
    >
      Search
    </label>
    <input
      className="search-filter-input"
      data-testid="search-filter"
      id="search-filter"
      onChange={[Function]}
      type="text"
      value=""
    />
    
  </section>
  <div
    className="members-no-results"
  >
    No results for
     
    <strong>
      <em>
        
      </em>
    </strong>
  </div>
</section>
`;

exports[`CongressMembers Component when \`useFetch\` returns data with 404 status displays \`Not Found\` 1`] = `
<h1>
  Not Found
</h1>
`;

exports[`CongressMembers Component when \`useFetch\` returns data with 500 status displays error message 1`] = `
<section>
  <h3>
    Whoops! There was a problem loading
     
    Congress Memebers data.
  </h3>
  <p>
    Please reload browser to try again in a little bit.
  </p>
</section>
`;
